# Mpi_thing

./: CMakeLists.txt  mpi-examples.cpp
